--- a/sberbank-dao/pom.xml
+++ b/sberbank-dao/pom.xml
@@ -86,6 +86,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
+
+
 
     </dependencies>
 
