--- a/sberbank-dao/pom.xml
+++ b/sberbank-dao/pom.xml
@@ -15,6 +15,83 @@
     <version>1.0-SNAPSHOT</version>
     <name>sberbank-dao</name>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                    <optimize>true</optimize>
+                    <showDeprecation>true</showDeprecation>
+                    <showWarnings>true</showWarnings>
+                </configuration>
+            </plugin>
+
+
+            <!--<plugin>-->
+            <!--<groupId>org.apache.maven.plugins</groupId>-->
+            <!--<artifactId>maven-jar-plugin</artifactId>-->
+            <!--<configuration>-->
+            <!--<archive>-->
+            <!--<manifest>-->
+            <!--<addClasspath>true</addClasspath>-->
+            <!--&lt;!&ndash;<classpathPrefix>lib/</classpathPrefix>&ndash;&gt;-->
+            <!--<mainClass>ru.panov.andy.Main</mainClass>-->
+            <!--</manifest>-->
+            <!--</archive>-->
+            <!--</configuration>-->
+            <!--</plugin>-->
+
+            <!--http://maven.apache.org/plugins/maven-assembly-plugin/
+            http://maven.apache.org/plugins/maven-assembly-plugin/usage.html
+            http://maven.apache.org/plugins/maven-assembly-plugin/examples/index.html
+            http://maven.apache.org/plugins/maven-assembly-plugin/examples/single/filtering-some-distribution-files.html
+
+            http://maven.apache.org/plugins/maven-assembly-plugin/descriptor.html
+            Q http://stackoverflow.com/questions/97640/force-maven2-to-copy-dependencies-into-target-lib-->
+
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.2.1</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+
+                    <!--<descriptors>-->
+                    <!--<descriptor>jar-with-dependencies.xml</descriptor>-->
+                    <!--</descriptors>-->
+                    <finalName>sberbankExchage</finalName>
+                    <outputDirectory>.</outputDirectory>
+                    <workDirectory>target/assembly/work</workDirectory>
+                    <archive>
+                        <!--<manifest>-->
+                            <!--<mainClass>ru.panov.andy.Main</mainClass>-->
+                        <!--</manifest>-->
+                    </archive>
+                </configuration>
+
+
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <!-- this is used for inheritance merges -->
+                        <phase>package</phase>
+                        <!-- bind to the packaging phase -->
+                        <goals>
+                            <goal>attached</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+
+        </plugins>
+    </build>
+
+
     <dependencies>
 
         <dependency>
